--- a/src/Pages/HomePage.css
+++ b/src/Pages/HomePage.css
@@ -63,12 +63,13 @@ body {
 .hero-section {
   height: 90vh;
   background: url('../assets/autoservice.jpeg') center/cover no-repeat;
-  display: flex;
+  /* display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  justify-content:start; */
+  /* align-items: center; */
+  padding-top: 5rem;
   color: white;
-  padding: 0 20px;
+  /* padding: 0 20px; */
 }
 
 .hero-section h1 {
