--- a/src/Pages/ConciergeService.css
+++ b/src/Pages/ConciergeService.css
@@ -75,7 +75,7 @@
     transition: background-color 0.3s ease;
   }
   
-  button:hover {
+  /* button:hover {
     background-color: #0056b3;
-  }
+  } */
   
