--- a/src/Pages/HomePage.css
+++ b/src/Pages/HomePage.css
@@ -36,6 +36,7 @@ body {
 /* Navbar */
 .navbar {
   display: flex;
+  align-items: center;
   gap: 20px;
   transition: all 0.3s ease-in-out;
 }
@@ -43,6 +44,21 @@ body {
 .navbar a {
   color: white;
   text-decoration: none;
+}
+
+.NavItems {
+  display: flex;
+  flex-direction: row-reverse;
+}
+
+.LoginBtn,.LogoutBtn,.SignUpBtn {
+  color: white;
+  padding: 10px 20px;
+  margin: 0 1rem;
+}
+
+.LogoutBtn {
+  background-color: #ff6347;
 }
 
 .navbar a:hover {
@@ -125,14 +141,17 @@ body {
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   transition: transform 0.2s ease-in-out;
-  text-decoration: none; /* Ensure there's no underline */
-  color: inherit; /* Inherit color to prevent default link color */
+  text-decoration: none;
+  /* Ensure there's no underline */
+  color: inherit;
+  /* Inherit color to prevent default link color */
 }
 
 .card h3 {
   font-size: 1.2rem;
   margin: 10px 0;
-  color: #4b0082; /* Customize heading color */
+  color: #4b0082;
+  /* Customize heading color */
 }
 
 .card p {
@@ -146,12 +165,14 @@ body {
 }
 
 a {
-  text-decoration: none; /* Ensure there's no underline on the link */
+  text-decoration: none;
+  /* Ensure there's no underline on the link */
 }
 
 a:hover {
   text-decoration: none;
-  color: inherit; /* Prevent hover underline or color change */
+  color: inherit;
+  /* Prevent hover underline or color change */
 }
 
 
@@ -195,7 +216,21 @@ a:hover {
 
   .menu-btn {
     display: block;
-}
+    margin: 0;
+    padding: 0 0 5px 0;
+  }
+
+  .LoginBtn,
+  .LogoutBtn {
+    height: 35px;
+    width: 60px;
+    padding: 0;
+  }
+
+  .LogoutBtn {
+    width: 70px;
+  }
+
   .hero-section {
     height: auto;
     padding: 50px 20px;
@@ -226,18 +261,27 @@ a:hover {
     flex-direction: column;
     gap: 0;
     display: none;
-}
+  }
 
-.navbar.open {
-  display: flex;
-}
-.navbar a {
-  padding: 10px;
-  border-top: 1px solid #444;
-}
+  .NavItems {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+  }
+
+
+  .navbar.open {
+    display: flex;
+  }
+
+  .navbar a {
+    padding: 10px;
+    border-top: 1px solid #444;
+  }
 }
 
 @media (max-width: 480px) {
+
   /* Hero Section */
   .hero-section h1 {
     font-size: 1.8rem;
