--- a/src/Pages/KeyDuplication.css
+++ b/src/Pages/KeyDuplication.css
@@ -63,8 +63,8 @@
     cursor: pointer;
     transition: background-color 0.3s ease;
   }
-  
+/*   
   button:hover {
     background-color: #0056b3;
-  }
+  } */
   
