--- a/src/Pages/SellYourCar.css
+++ b/src/Pages/SellYourCar.css
@@ -60,7 +60,7 @@
     transition: background-color 0.3s ease;
   }
   
-  button:hover {
+  /* button:hover {
     background-color: #218838;
-  }
+  } */
   
